--- a/.gitignore
+++ b/.gitignore
@@ -73,7 +73,7 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variable files
-.env
+# .env
 .env.development.local
 .env.test.local
 .env.production.local
@@ -84,12 +84,12 @@ web_modules/
 .parcel-cache
 
 # Next.js build output
-.next
-out
+# .next
+# out
 
 # Nuxt.js build / generate output
-.nuxt
-dist
+# .nuxt
+# dist
 
 # Gatsby files
 .cache/
