--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 8082",
+    "dev": "next dev -p 8802",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 8801",
     "lint": "next lint"
   },
   "dependencies": {
