--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - ./:/app
     environment:
       - NODE_ENV=development
-    command: npm run dev
+    command: /bin/sh -c "npm install && npm run dev"
     restart: unless-stopped
 
   nginx:
