--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev -p 8802",
     "build": "next build",
+    "export": "next export",
     "start": "next start -p 8801",
     "lint": "next lint"
   },
