--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,17 @@
+version: '3'
 services:
   nextjs:
-    container_name: ${DOCKER_PROJECT_NAME}_nextjs
-    build:
-      context: .
-      dockerfile: ./docker/nextjs/Dockerfile
-    volumes:
-      - ./:/app
-    environment:
-      - NODE_ENV=development
-    command: /bin/sh -c "npm install && npm run dev"
+    build: .
+    container_name: nextjs
     restart: unless-stopped
-
+  
   nginx:
-    container_name: ${DOCKER_PROJECT_NAME}_nginx
-    image: nginx:1.19
+    image: nginx:alpine
+    container_name: nginx
     restart: unless-stopped
-    volumes:
-      - ./docker/nginx/logs:/var/log/nginx
-      - ./:/var/www/html
-      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     ports:
-      - ${DOCKER_NGINX_PORT}:80
+      - "${DOCKER_NGINX_PORT}:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - nextjs
